--- a/MySelenium/test-output/old/Default suite/methods-alphabetical.html
+++ b/MySelenium/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b260fa">  <td>20/11/02 18:08:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG1.doRegistration()[pri:0, instance:com.selenium.TestNG1@2e6a8155]">doRegistration</td> 
-  <td>main@783191662</td>   <td></td> </tr>
-<tr bgcolor="b260fa">  <td>20/11/02 18:08:08</td>   <td>3517</td> <td title="&lt;&lt;TestNG1.endUp()[pri:0, instance:com.selenium.TestNG1@2e6a8155]">&lt;&lt;endUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@783191662</td>   <td></td> </tr>
-<tr bgcolor="b260fa">  <td>20/11/02 18:08:05</td>   <td>791</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG1.enterDate()[pri:0, instance:com.selenium.TestNG1@2e6a8155]">enterDate</td> 
-  <td>main@783191662</td>   <td></td> </tr>
-<tr bgcolor="b260fa">  <td>20/11/02 18:08:05</td>   <td>1009</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG1.enterYear()[pri:0, instance:com.selenium.TestNG1@2e6a8155]">enterYear</td> 
-  <td>main@783191662</td>   <td></td> </tr>
-<tr bgcolor="b260fa">  <td>20/11/02 18:08:06</td>   <td>1937</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG1.entermonth()[pri:0, instance:com.selenium.TestNG1@2e6a8155]">entermonth</td> 
-  <td>main@783191662</td>   <td></td> </tr>
-<tr bgcolor="b260fa">  <td>20/11/02 18:08:07</td>   <td>3107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG1.selectRadiobtn()[pri:0, instance:com.selenium.TestNG1@2e6a8155]">selectRadiobtn</td> 
-  <td>main@783191662</td>   <td></td> </tr>
-<tr bgcolor="b260fa">  <td>20/11/02 18:07:53</td>   <td>-11354</td> <td title="&gt;&gt;TestNG1.setup1()[pri:0, instance:com.selenium.TestNG1@2e6a8155]">&gt;&gt;setup1</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@783191662</td>   <td></td> </tr>
+<tr bgcolor="b260fa">  <td>20/11/05 19:20:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG1.doRegistration()[pri:1, instance:com.selenium.TestNG1@6221a451]">doRegistration</td> 
+  <td>main@150138649</td>   <td></td> </tr>
+<tr bgcolor="b260fa">  <td>20/11/05 19:20:17</td>   <td>4199</td> <td title="&lt;&lt;TestNG1.endUp()[pri:0, instance:com.selenium.TestNG1@6221a451]">&lt;&lt;endUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@150138649</td>   <td></td> </tr>
+<tr bgcolor="b260fa">  <td>20/11/05 19:20:13</td>   <td>847</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG1.enterDate()[pri:3, instance:com.selenium.TestNG1@6221a451]">enterDate</td> 
+  <td>main@150138649</td>   <td></td> </tr>
+<tr bgcolor="b260fa">  <td>20/11/05 19:20:15</td>   <td>2647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG1.enterYear()[pri:5, instance:com.selenium.TestNG1@6221a451]">enterYear</td> 
+  <td>main@150138649</td>   <td></td> </tr>
+<tr bgcolor="b260fa">  <td>20/11/05 19:20:14</td>   <td>1130</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG1.entermonth()[pri:4, instance:com.selenium.TestNG1@6221a451]">entermonth</td> 
+  <td>main@150138649</td>   <td></td> </tr>
+<tr bgcolor="b260fa">  <td>20/11/05 19:20:16</td>   <td>3708</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG1.selectRadiobtn()[pri:6, instance:com.selenium.TestNG1@6221a451]">selectRadiobtn</td> 
+  <td>main@150138649</td>   <td></td> </tr>
+<tr bgcolor="b260fa">  <td>20/11/05 19:20:00</td>   <td>-12788</td> <td title="&gt;&gt;TestNG1.setup1()[pri:0, instance:com.selenium.TestNG1@6221a451]">&gt;&gt;setup1</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@150138649</td>   <td></td> </tr>
+<tr bgcolor="b260fa">  <td>20/11/05 19:20:13</td>   <td>426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG1.usingMathClass()[pri:2, instance:com.selenium.TestNG1@6221a451]">usingMathClass</td> 
+  <td>main@150138649</td>   <td></td> </tr>
 </table>
