--- a/MySelenium/test-output/index.html
+++ b/MySelenium/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\krishna\AppData\Local\Temp\testng-eclipse-1472511285\testng-customsuite.xml</span>
+                    <span>C:\Users\krishna\AppData\Local\Temp\testng-eclipse--633506530\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -123,6 +123,11 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="com.selenium.TestNG1" class="method navigator-link" hash-for-method="selectRadiobtn">selectRadiobtn</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.selenium.TestNG1" class="method navigator-link" hash-for-method="usingMathClass">usingMathClass</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -178,12 +183,19 @@
                   <span class="method-name">selectRadiobtn</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="usingMathClass">
+                  </a> <!-- usingMathClass -->
+                  <span class="method-name">usingMathClass</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\krishna\AppData\Local\Temp\testng-eclipse-1472511285\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\krishna\AppData\Local\Temp\testng-eclipse--633506530\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -232,32 +244,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'entermonth')
 data.setCell(0, 2, 'com.selenium.TestNG1')
-data.setCell(0, 3, 1166);
+data.setCell(0, 3, 1514);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'enterYear')
 data.setCell(1, 2, 'com.selenium.TestNG1')
-data.setCell(1, 3, 926);
+data.setCell(1, 3, 1058);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'doRegistration')
 data.setCell(2, 2, 'com.selenium.TestNG1')
-data.setCell(2, 3, 788);
+data.setCell(2, 3, 422);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'selectRadiobtn')
+data.setCell(3, 1, 'usingMathClass')
 data.setCell(3, 2, 'com.selenium.TestNG1')
-data.setCell(3, 3, 293);
+data.setCell(3, 3, 419);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'enterDate')
+data.setCell(4, 1, 'selectRadiobtn')
 data.setCell(4, 2, 'com.selenium.TestNG1')
-data.setCell(4, 3, 215);
+data.setCell(4, 3, 369);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'enterDate')
+data.setCell(5, 2, 'com.selenium.TestNG1')
+data.setCell(5, 3, 280);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -290,27 +306,31 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="test-method">
                 <span class="method-name">doRegistration</span>
-                <span class="method-start">11361 ms</span>
+                <span class="method-start">12793 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">usingMathClass</span>
+                <span class="method-start">13219 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">enterDate</span>
-                <span class="method-start">12152 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">enterYear</span>
-                <span class="method-start">12370 ms</span>
+                <span class="method-start">13640 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">entermonth</span>
-                <span class="method-start">13298 ms</span>
+                <span class="method-start">13923 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">enterYear</span>
+                <span class="method-start">15440 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">selectRadiobtn</span>
-                <span class="method-start">14467 ms</span>
+                <span class="method-start">16500 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">endUp</span>
-                <span class="method-start">14877 ms</span>
+                <span class="method-start">16992 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
